fix curl fetch torrents