@@ -3,7 +3,7 @@ package sb.tasks.service;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.util.List;
+import java.util.*;
 
 import com.google.common.io.ByteStreams;
 import lombok.RequiredArgsConstructor;
@@ -20,9 +20,9 @@ public final class CurlCommon {
         return fetch0(downloadCmd(url));
     }
 
-    private String fetch0(List<String> url) throws IOException {
-        LOG.info("download cmd = {}", url);
-        Process pp = new ProcessBuilder(url)
+    private String fetch0(List<String> cmd) throws IOException {
+        LOG.info("download cmd = {}", cmd);
+        Process pp = new ProcessBuilder(cmd)
                 .redirectInput(ProcessBuilder.Redirect.PIPE)
                 .start();
         var res = new StringBuilder();
@@ -35,14 +35,48 @@ public final class CurlCommon {
     }
 
     public byte[] binary(String url) throws IOException {
-        LOG.info("Downloading from url {}", url);
-        Process pp = new ProcessBuilder(downloadCmd(url))
+        List<String> cmd = downloadCmd(url);
+        LOG.info("Downloading from url {}, cmd={}", url, cmd);
+        Process pp = new ProcessBuilder(cmd)
                 .redirectInput(ProcessBuilder.Redirect.PIPE)
                 .start();
         return ByteStreams.toByteArray(pp.getInputStream());
     }
 
+    public Map<String, String> headers(String url) throws IOException {
+        Map<String, String> headers = new HashMap<>();
+        List<String> cmd = headersCmd(url);
+        LOG.info("Headers from url {}", cmd);
+        Process pp = new ProcessBuilder(cmd)
+                .redirectInput(ProcessBuilder.Redirect.PIPE)
+                .start();
+        byte[] bytes = ByteStreams.toByteArray(pp.getInputStream());
+        for (String line : new String(bytes).split("\n")) {
+            if (line.contains(":")) {
+                String[] ln = line.split(":\s+");
+                if (ln.length == 2) {
+                    headers.put(ln[0], ln[1]);
+                }
+            }
+        }
+        return headers;
+    }
+
     private List<String> downloadCmd(String url) {
-        return List.of("/usr/bin/curl", url, "-L", props.curlExtra());
+        List<String> cmd = new ArrayList<>();
+        cmd.add("curl");
+        cmd.add(url);
+        cmd.add("-L");
+        cmd.addAll(Arrays.asList(props.curlExtra().split("\\s+")));
+        return cmd;
+    }
+
+    private List<String> headersCmd(String url) {
+        List<String> cmd = downloadCmd(url);
+        cmd.add("-D");
+        cmd.add("-");
+        cmd.add("-o");
+        cmd.add("/dev/null");
+        return cmd;
     }
 }
